add index service URL to bootstrappers

--- a/cagrid-cds/cagrid-cds-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-cds/cagrid-cds-service-tools/src/main/resources/bootstrapper.properties
@@ -15,6 +15,8 @@ cagrid.cds.wsrf.host=localhost
 #cagrid.cds.key.location=
 #cagrid.cds.legacy-certificate.location=
 #cagrid.cds.legacy-key.location=
+#cagrid.cds.wsrf.registration.index.url=http://<host:port>/wsrf/services/DefaultIndexService
+#cagrid.cds.service.client.gridgrouper.url=https://<host:port>/gridgrouper
 
 cagrid.cds.wsrf.port=7736
 cagrid.cds.wsrf.keystore.alias=host
@@ -30,8 +32,6 @@ cagrid.cds.legacy-wsrf.keystore.alias=host
 cagrid.cds.legacy-wsrf.keystore.password=changeit
 cagrid.cds.legacy-wsrf.key.password=changeit
 
-# Below properties are for CDS service backend to communicate (soap) with other services in the grid
-cagrid.cds.service.client.gridgrouper.url=https://localhost:7738/gridgrouper
 # We won't prompt for these. Will default to same as above. Uncomment and set them here to override defaults.
 #cagrid.cds.service.client.keystorefile=
 #cagrid.cds.service.client.keystorepassword=
