--- a/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/bootstrapper.properties
@@ -22,3 +22,4 @@ org.cagrid.dorian.legacy-keystore.alias=host
 org.cagrid.dorian.legacy-keystore.password=changeit
 org.cagrid.dorian.legacy-key.password=changeit
 cagrid.dorian.legacy-wsrf.port=8443
+cagrid.dorian.wsrf.registration.index.url=http://localhost:8080/wsrf/services/DefaultIndexService
