--- a/cagrid-gme/cagrid-gme-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-gme/cagrid-gme-service-tools/src/main/resources/bootstrapper.properties
@@ -30,4 +30,5 @@ cagrid.gme.service.db.password=
 cagrid.gme.dorian.config=META-INF/spring/dorian-configuration.xml
 cagrid.gme.dorian.properties=../../cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/dorian.properties
 
+cagrid.gme.wsrf.registration.index.url=http://localhost:8080/wsrf/services/DefaultIndexService
 
