--- a/cagrid-gts/cagrid-gts-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-gts/cagrid-gts-service-tools/src/main/resources/bootstrapper.properties
@@ -17,3 +17,4 @@ cagrid.gts.legacy-wsrf.key.location=/Users/oster/Desktop/cagrid-training-certs/m
 cagrid.gts.legacy-wsrf.keystore.alias=host
 cagrid.gts.legacy-wsrf.keystore.password=changeit
 cagrid.gts.legacy-wsrf.key.password=changeit
+cagrid.gts.wsrf.registration.index.url=http://localhost:8080/wsrf/services/DefaultIndexService
