--- a/cagrid-gridgrouper/cagrid-gridgrouper-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-gridgrouper/cagrid-gridgrouper-service-tools/src/main/resources/bootstrapper.properties
@@ -21,3 +21,4 @@ cagrid.gridgrouper.legacy-key.location=/Users/langella/work/caGrid/Training/trai
 cagrid.gridgrouper.legacy-wsrf.keystore.alias=host
 cagrid.gridgrouper.legacy-wsrf.keystore.password=changeit
 cagrid.gridgrouper.legacy-wsrf.key.password=changeit
+cagrid.gridgrouper.wsrf.registration.index.url=http://localhost:8080/wsrf/services/DefaultIndexService
