--- a/cagrid-trust/cagrid-trust-api/pom.xml
+++ b/cagrid-trust/cagrid-trust-api/pom.xml
@@ -8,6 +8,7 @@
 	</parent>
 	<artifactId>cagrid-trust-api</artifactId>
 	<name>caGrid Trust API</name>
+	<packaging>bundle</packaging>
 
 
 	<build>
@@ -19,17 +20,155 @@
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>
-
+						<Export-Package>org.cagrid.trust.manager,org.cagrid.trust.service
 						</Export-Package>
 						<Import-Package>*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.5</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/schema/xsd</outputDirectory>
+							<resources>
+								<resource>
+									<directory>src/main/resources</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy</id>
+						<phase>initialize</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.cagrid</groupId>
+									<artifactId>cagrid-gts-api</artifactId>
+									<version>${project.version}</version>
+									<overWrite>true</overWrite>
+									<outputDirectory>target/schema/xsd</outputDirectory>
+									<includes>schema/org/cagrid/gts/gts.xsd</includes>
+									<destFileName>gts.xsd</destFileName>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+
+			<!-- BEAN GENERATION -->
+<!--  
+			<plugin>
+				<groupId>org.jvnet.jaxb2.maven2</groupId>
+				<artifactId>maven-jaxb2-plugin</artifactId>
+				
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+
+				<configuration>
+					<generatePackage>org.cagrid.trust.model</generatePackage>
+
+					<generateDirectory>${project.build.directory}/generated-sources</generateDirectory>
+					<schemaDirectory>${basedir}/target/schema/xsd</schemaDirectory>
+
+					<schemaIncludes>
+						<schemaInclude>sync-gts.xsd</schemaInclude>
+					</schemaIncludes>
+					<extension>true</extension>
+					<strict>true</strict>
+					<verbose>true</verbose>
+					<args>
+						<arg>-XtoString</arg>
+						<arg>-Xequals</arg>
+						<arg>-XhashCode</arg>
+						<arg>-Xannotate</arg>
+						<arg>-Xinheritance</arg>
+					</args>
+
+					<episodes>
+						<episode>
+							<groupId>org.cagrid</groupId>
+							<artifactId>cagrid-gts-api</artifactId>
+							<version>${project.version}</version>
+						</episode>
+					</episodes>
+					<dependencies>
+						<dependency>
+							<groupId>org.cagrid</groupId>
+							<artifactId>cagrid-gts-api</artifactId>
+							<version>${project.version}</version>
+						</dependency>
+					</dependencies>
+
+					<plugins>
+						<plugin>
+							<groupId>org.jvnet.jaxb2_commons</groupId>
+							<artifactId>jaxb2-basics</artifactId>
+						</plugin>
+
+						<plugin>
+							<groupId>org.jvnet.jaxb2_commons</groupId>
+							<artifactId>annotate</artifactId>
+						</plugin>
+					</plugins>
+
+					<removeOldOutput>true</removeOldOutput>
+					<forceRegenerate>${force.regenerate}</forceRegenerate>
+				</configuration>
+			</plugin>
+			-->
 		</plugins>
 	</build>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.jvnet.jaxb2_commons</groupId>
+			<artifactId>jaxb2-basics-runtime</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jvnet.jaxb2_commons</groupId>
+			<artifactId>jaxb2-basics</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jvnet.jaxb2_commons</groupId>
+			<artifactId>annotate</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk14</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-proxy-trust</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-gaards-api</artifactId>
