--- a/cagrid-trust/cagrid-trust-api/pom.xml
+++ b/cagrid-trust/cagrid-trust-api/pom.xml
@@ -1,208 +1,155 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.cagrid</groupId>
-		<artifactId>cagrid-trust</artifactId>
-		<version>2.0.2-SNAPSHOT</version>
-	</parent>
-	<artifactId>cagrid-trust-api</artifactId>
-	<name>caGrid Trust API</name>
-	<packaging>bundle</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.cagrid</groupId>
+        <artifactId>cagrid-trust</artifactId>
+        <version>2.0.2-SNAPSHOT</version>
+    </parent>
+    <artifactId>cagrid-trust-api</artifactId>
+    <name>caGrid Trust API</name>
+    <packaging>bundle</packaging>
 
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>org.cagrid.trust.manager,org.cagrid.trust.service
-						</Export-Package>
-						<Import-Package>*</Import-Package>
-					</instructions>
-				</configuration>
-			</plugin>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Export-Package>org.cagrid.trust.manager,org.cagrid.trust.service
+                        </Export-Package>
+                        <Import-Package>*</Import-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
 
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.5</version>
-				<executions>
-					<execution>
-						<id>copy-resources</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>target/schema/xsd</outputDirectory>
-							<resources>
-								<resource>
-									<directory>src/main/resources</directory>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.cagrid</groupId>
-									<artifactId>cagrid-gts-api</artifactId>
-									<version>${project.version}</version>
-									<overWrite>true</overWrite>
-									<outputDirectory>target/schema/xsd</outputDirectory>
-									<includes>schema/org/cagrid/gts/gts.xsd</includes>
-									<destFileName>gts.xsd</destFileName>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.5</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>target/schema/xsd</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/resources</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.cagrid</groupId>
+                                    <artifactId>cagrid-gts-api</artifactId>
+                                    <version>${project.version}</version>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>target/schema/xsd</outputDirectory>
+                                    <includes>schema/org/cagrid/gts/gts.xsd</includes>
+                                    <destFileName>gts.xsd</destFileName>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
 
-			<!-- BEAN GENERATION -->
-<!--  
-			<plugin>
-				<groupId>org.jvnet.jaxb2.maven2</groupId>
-				<artifactId>maven-jaxb2-plugin</artifactId>
-				
-				<executions>
-					<execution>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
+            <!-- BEAN GENERATION -->
+            <!-- <plugin> <groupId>org.jvnet.jaxb2.maven2</groupId> <artifactId>maven-jaxb2-plugin</artifactId> <executions> <execution> <goals> <goal>generate</goal> </goals> </execution> </executions> 
+                <configuration> <generatePackage>org.cagrid.trust.model</generatePackage> <generateDirectory>${project.build.directory}/generated-sources</generateDirectory> <schemaDirectory>${basedir}/target/schema/xsd</schemaDirectory> 
+                <schemaIncludes> <schemaInclude>sync-gts.xsd</schemaInclude> </schemaIncludes> <extension>true</extension> <strict>true</strict> <verbose>true</verbose> <args> <arg>-XtoString</arg> <arg>-Xequals</arg> 
+                <arg>-XhashCode</arg> <arg>-Xannotate</arg> <arg>-Xinheritance</arg> </args> <episodes> <episode> <groupId>org.cagrid</groupId> <artifactId>cagrid-gts-api</artifactId> <version>${project.version}</version> 
+                </episode> </episodes> <dependencies> <dependency> <groupId>org.cagrid</groupId> <artifactId>cagrid-gts-api</artifactId> <version>${project.version}</version> </dependency> </dependencies> <plugins> <plugin> 
+                <groupId>org.jvnet.jaxb2_commons</groupId> <artifactId>jaxb2-basics</artifactId> </plugin> <plugin> <groupId>org.jvnet.jaxb2_commons</groupId> <artifactId>annotate</artifactId> </plugin> </plugins> <removeOldOutput>true</removeOldOutput> 
+                <forceRegenerate>${force.regenerate}</forceRegenerate> </configuration> </plugin> -->
+        </plugins>
+    </build>
 
-				<configuration>
-					<generatePackage>org.cagrid.trust.model</generatePackage>
+    <dependencies>
 
-					<generateDirectory>${project.build.directory}/generated-sources</generateDirectory>
-					<schemaDirectory>${basedir}/target/schema/xsd</schemaDirectory>
+        <dependency>
+            <groupId>org.jvnet.jaxb2_commons</groupId>
+            <artifactId>jaxb2-basics-runtime</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jvnet.jaxb2_commons</groupId>
+            <artifactId>jaxb2-basics</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jvnet.jaxb2_commons</groupId>
+            <artifactId>annotate</artifactId>
+        </dependency>
 
-					<schemaIncludes>
-						<schemaInclude>sync-gts.xsd</schemaInclude>
-					</schemaIncludes>
-					<extension>true</extension>
-					<strict>true</strict>
-					<verbose>true</verbose>
-					<args>
-						<arg>-XtoString</arg>
-						<arg>-Xequals</arg>
-						<arg>-XhashCode</arg>
-						<arg>-Xannotate</arg>
-						<arg>-Xinheritance</arg>
-					</args>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk14</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-proxy-trust</artifactId>
+        </dependency>
 
-					<episodes>
-						<episode>
-							<groupId>org.cagrid</groupId>
-							<artifactId>cagrid-gts-api</artifactId>
-							<version>${project.version}</version>
-						</episode>
-					</episodes>
-					<dependencies>
-						<dependency>
-							<groupId>org.cagrid</groupId>
-							<artifactId>cagrid-gts-api</artifactId>
-							<version>${project.version}</version>
-						</dependency>
-					</dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-gaards-api</artifactId>
+        </dependency>
 
-					<plugins>
-						<plugin>
-							<groupId>org.jvnet.jaxb2_commons</groupId>
-							<artifactId>jaxb2-basics</artifactId>
-						</plugin>
+        <dependency>
+            <groupId>org.cagrid</groupId>
+            <artifactId>cagrid-gts-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-						<plugin>
-							<groupId>org.jvnet.jaxb2_commons</groupId>
-							<artifactId>annotate</artifactId>
-						</plugin>
-					</plugins>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>com.springsource.slf4j.log4j</artifactId>
+        </dependency>
 
-					<removeOldOutput>true</removeOldOutput>
-					<forceRegenerate>${force.regenerate}</forceRegenerate>
-				</configuration>
-			</plugin>
-			-->
-		</plugins>
-	</build>
+        <dependency>
+            <groupId>ant</groupId>
+            <artifactId>ant-apache-log4j</artifactId>
+        </dependency>
 
-	<dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>org.jvnet.jaxb2_commons</groupId>
-			<artifactId>jaxb2-basics-runtime</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.jvnet.jaxb2_commons</groupId>
-			<artifactId>jaxb2-basics</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.jvnet.jaxb2_commons</groupId>
-			<artifactId>annotate</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk14</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-proxy-trust</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-gaards-api</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>com.springsource.slf4j.log4j</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>ant</groupId>
-			<artifactId>ant-apache-log4j</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-
-	</dependencies>
+    </dependencies>
 </project>
