--- a/cagrid-dorian/cagrid-dorian-soap-client/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-soap-client/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-dorian</artifactId>
-		<version>2.0.2-SNAPSHOT</version>
+		<version>2.0.2</version>
 	</parent>
 	<artifactId>cagrid-dorian-soap-client</artifactId>
 	<packaging>bundle</packaging>
