--- a/cagrid-gme/cagrid-gme-service-tools/pom.xml
+++ b/cagrid-gme/cagrid-gme-service-tools/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-gme</artifactId>
-		<version>2.0.2-SNAPSHOT</version>
+		<version>2.0.2</version>
 	</parent>
 
 	<artifactId>cagrid-gme-service-tools</artifactId>
