--- a/cagrid-gridgrouper/cagrid-gridgrouper-service-tools/pom.xml
+++ b/cagrid-gridgrouper/cagrid-gridgrouper-service-tools/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-gridgrouper</artifactId>
-		<version>2.0.2</version>
+		<version>2.0.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>cagrid-gridgrouper-service-tools</artifactId>
