--- a/cagrid-proxy-trust/pom.xml
+++ b/cagrid-proxy-trust/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-osgi</artifactId>
-		<version>2.0.2</version>
+		<version>2.0.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>cagrid-proxy-trust</artifactId>
 	<name>caGrid Proxy Cert. Trust Manager</name>
