--- a/cagrid-trust/cagrid-trust-api/pom.xml
+++ b/cagrid-trust/cagrid-trust-api/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.cagrid</groupId>
         <artifactId>cagrid-trust</artifactId>
-        <version>2.0.2</version>
+        <version>2.0.3-SNAPSHOT</version>
     </parent>
     <artifactId>cagrid-trust-api</artifactId>
     <name>caGrid Trust API</name>
